# svglite

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
fake-vglite/: CMakeLists.txt  main.c
include/: svglite.h
src/: lib.rs  main.rs  text.rs  vg_lite.rs  vglite.rs  vglite_util.rs
svglite2bin/: CMakeLists.txt  main.c
test-svglite/: CMakeLists.txt  main.c
tests/: jpeg_decoder.rs  test.rs
