[package]
name = "svglite"
version = "0.1.0"
edition = "2021"
license = "BSD 2-Clause"
license-file = "LICENSE"
keywords = ["SVG", "VGLite"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
test = true

[dependencies]
usvg = "0.29.0"
ttf-parser = "0.18.1"
jpeg-decoder = "0.3"
png = "0.17"
usvg-text-layout = "0.29.0"

[profile.release]
opt-level = "z"
